[package]
name = "tauri-helper"
version = "0.1.1"
edition = "2024"
authors = ["RiadYan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RiadYan/tauri-helper"
homepage = "https://github.com/RiadYan/tauri-helper"
keywords = ["tauri", "macros", "commands", "development-tools"]
categories = ["development-tools", "gui", "api-bindings"]

[dependencies]
walkdir = { workspace = true }
syn = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tauri_helper_core = { path = "./local-crates/tauri_helper_core" }
tauri_helper_macros = { path = "./local-crates/tauri_helper_macros", default-features = false }

[features]
default = []
tracing = ["tauri_helper_macros/tracing"]

[workspace]
members = ["local-crates/tauri_helper_core", "local-crates/tauri_helper_macros"]

[workspace.dependencies]
walkdir = "2.5.0"
syn = { version = "2.0.100", features = ["full"] }
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
