[package]
name = "tauri-helper"
version = "0.1.4"
edition = "2024"
authors = ["RiadYan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RiadYan/tauri-helper"
homepage = "https://github.com/RiadYan/tauri-helper"
keywords = ["tauri", "macros", "commands", "development-tools"]
categories = ["development-tools", "gui", "api-bindings"]
description = "A collection of tools and utilities designed to simplify the development of Tauri applications."

[dependencies]
walkdir = "2.5.0"
syn = { version = "2.0.100", features = ["full"] }
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
tauri_helper_core = "0.1.1"
tauri_helper_macros = "0.1.3"

[features]
default = []
tracing = ["tauri_helper_macros/tracing"]

[workspace]
members = ["local-crates/tauri_helper_core", "local-crates/tauri_helper_macros"]
