[package]
name = "tauri_helper_core"
version = "0.1.1"
authors = ["RiadYan"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RiadYan/tauri-helper"
homepage = "https://github.com/RiadYan/tauri-helper"
keywords = ["tauri", "macros", "commands", "development-tools"]
categories = ["development-tools", "gui", "api-bindings"]
description = "The core functions of the tauri_helper crate"

[dependencies]
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
