[package]
name = "tauri_helper_macros"
version = "0.1.0"
authors = ["RiadYan"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
tracing = { version = "0.1.41", optional = true }
thiserror = "2.0.12"
walkdir = { workspace = true }
syn = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tauri_helper_core = { path = "../tauri_helper_core" }


[dependencies.quote]
version = "1.0.38"

[dependencies.proc-macro2]
version = "1.0.93"

[dependencies.proc-macro-error]
version = "1.0.4"

[features]
tracing = ["dep:tracing"]
